[workspace]
members = [
    "cr-bridge-core",
    "cr-bridge-daemon",
    "demo-metaverse",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["CR-Bridge Contributors"]
repository = "https://github.com/CrBridge/cr-bridge"

[workspace.dependencies]
# Core async
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
bytes = "1"
rand = "0.8"
futures-util = "0.3"

# Math
nalgebra = "0.32"

# Network / Protocol
rosc = "0.10"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Concurrency
parking_lot = "0.12"
