[package]
name = "cr-bridge-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CR-Bridge System Daemon"

[[bin]]
name = "cr-bridge-daemon"
path = "src/main.rs"

[dependencies]
cr-bridge-core = { path = "../cr-bridge-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
anyhow = "1"
